# Parallel-Programming

./: CMakeLists.txt  README.md
Dijkstra_Shortest_Path/: dijkstra.cpp  dijkstra.h
MPI_Directory/Hello World/: hello_world.h
MPI_Directory/Send Receive/: DynamicReceiving.cpp  SendReceive.cpp  SendReceive.h  SendReceiveProbe.cpp
Matrix_Multiplication/: Matrix_multiplication.cpp
PI_Value_Calculation/: compute_PI.cpp  compute_PI.h
Parallel Programming Practice/MPI_Directory/Hello World/: hello_world.cpp
Parallel Programming Practice/MPI_Directory/RandomWalkApplication/: RandomWalk.cpp
Parallel Programming Practice/MPI_Directory/Send Receive/: PingPong.cpp  Ring.cpp  SendReceiveProbe.cpp
Parallel Programming Practice/Matrix_Multiplication/: Matrix_multiplication.h
Parallel Programming Practice/Prime_Numbers/: Prime_Numbers.cpp
Prime_Numbers/: Prime_Numbers.h
Socket Programming Practice/: BroadCastSender.cc  BroadcastReceiver.cc  MulticastReceiver.cc  MulticastSender.cc  TCPEchoClient.cc  TCPEchoServer.cc  UDPEchoClient.cc  UDPEchoServer.cc
Unix-Systems Practice/: basic1.cpp  basic1.h  basic2.cpp  basic2.h
